# dabs

./: .flake8  .mypy.ini  README.md  TAXI_INSIGHTS_README.md  databricks.yml  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: README.md  databricks-deploy.yml  databricks-test.yml  pre-merge-checks.yml
resources/: dabs_job.yml  dabs_pipeline.yml
src/: dlt_pipeline.ipynb  notebook.ipynb
src/variant/: VARIANT_Data_Type_Documentation.md  variant.ipynb
tests/: main_test.py  test_example.py
